cluster/apps/homeassistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-main
  namespace: homeassistant
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - hass.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant-main
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-zwavejsui
  namespace: homeassistant
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - zwavejsui.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: home-assistant-zwavejsui
          port: 8091
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-zigbee2mqtt
  namespace: homeassistant
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - zigbee2mqtt.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: home-assistant-zigbee2mqtt
          port: 8080
